@@ -15,8 +15,10 @@
 #include <unistd.h>
 #include "op_types.h"
 
-#ifdef __i386__
+#if defined(__i386__)
 #define opd_nr_lookup_dcookie 253
+#elif defined(__powerpc__)
+#define opd_nr_lookup_dcookie 235
 #elif defined(__alpha__)
 #define opd_nr_lookup_dcookie 406
 #elif defined(__ia64__)
@@ -25,9 +27,17 @@
 #error Please define lookup_dcookie for your architecture
 #endif
 
+#if defined(__powerpc__) && !defined(__powerpc64__)
+static inline int lookup_dcookie(cookie_t cookie, char * buf, size_t size)
+{
+	return syscall(opd_nr_lookup_dcookie, (unsigned long)(cookie >> 32),
+		       (unsigned long)(cookie & 0xffffffff), buf, size);
+}
+#else
 static inline int lookup_dcookie(cookie_t cookie, char * buf, size_t size)
 {
 	return syscall(opd_nr_lookup_dcookie, cookie, buf, size);
 }
+#endif /* ppc32 */
 
 #endif /* OPD_COOKIE_H */
